--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 h1 {
   font-size: 30px;
   font-weight: 700;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 /* Menu en bas */
@@ -33,6 +34,7 @@ h1 {
   margin: 0 15px;
   font-size: 16px;
   font-weight: 600;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 .menu a:hover {
